buildscript {
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:4.2.0'
  }
}

plugins {
  id 'java-library'
  id 'jacoco'
  id 'com.github.kt3k.coveralls' version '2.8.2'
  id 'signing'
  id 'com.jfrog.bintray' version '1.8.4'
  id 'maven-publish'
}
apply plugin: 'biz.aQute.bnd.builder'


def getVersionName() {
  def errOut = new ByteArrayOutputStream()
  try {
    def stdOut = new ByteArrayOutputStream()
    exec {
      commandLine 'git', 'describe', '--tags'
      standardOutput = stdOut
      errorOutput = errOut
    }
    // strip of leading "v"
    return stdOut.toString().trim().substring(1)
  } catch (ignore) {
    logger.info('Error running git describe (' + errOut.toString().trim() + '), defaulting to 0.0.0')
    return '0.0.0'
  }
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
project.group = 'org.pharmgkb'
project.version = getVersionName()

ext {
  baseName = 'pgkb-common-io'
  moduleName = 'org.pharmgkb.common.io'
  description = 'Common IO code shared among all PharmGKB projects.'
  url = 'https://github.com/PharmGKB/' + project.ext.baseName + '.git'
  scm = 'scm:git@github.com:PharmGKB/' + project.ext.baseName + '.git'
  orgName = 'PharmGKB'
  orgUrl = 'https://www.pharmgkb.org'
  // grab properties from environment for Travis CI
  gpgPwd = project.hasProperty('signing.password') ? project.getProperty('signing.password') : System.getenv('SIGNING_PASSWORD')
  sonatypeUser = project.hasProperty('ossrhUsername') ? ossrhUsername : System.getenv('OSSRH_USERNAME')
  sonatypePwd  = project.hasProperty('ossrhPassword') ? ossrhPassword : System.getenv('OSSRH_PASSWORD')
  bintrayUser = project.hasProperty('bintrayUsername') ? bintrayUsername : System.getenv('BINTRAY_USERNAME')
  bintrayKey  = project.hasProperty('bintrayApiKey')   ? bintrayApiKey   : System.getenv('BINTRAY_API_KEY')
}


repositories {
  jcenter()
}

dependencies {
  api group: 'com.google.api-client', name: 'google-api-client', version: '1.30.2'
  api group: 'com.google.http-client', name: 'google-http-client-gson', version: '1.31.0'
  api group: 'com.google.gdata', name: 'core', version: '1.47.1'
  implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
  implementation group: 'commons-io', name: 'commons-io', version: '2.6'
  implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
  implementation group: 'org.checkerframework', name: 'checker-qual', version: '3.0.0'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'

  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
  testImplementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.64'
  testImplementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.64'
}

apply from: 'pgkb-build.gradle'
